# simdHalfs

./: .gitignore  CMakeLists.txt  Makefile.am  clean-up.sh  configure.ac
autom4te.cache/: output.0  requests  traces.0
include/: ASArray.h  ASD3DUtils.h  config.h  config.h.in  float_test_vector.h  half.h  half_print.h  half_test.h  half_vector_test.h  hmmintrin.h  mm_malloc.h  mytime.h  test_float.h
src/: CMakeLists.txt  Makefile.am  conv.cpp  float_test_vector.cpp  half.cpp  half_print.cpp  half_test.cpp  half_vector_test.cpp  main.cpp  mytime.c  test_float.cpp
